Show power profiles OSD only once / fix mem leak

- Currently the OSD window can be spawned multiple times
- If you hold the shortcut, you can currently consume all your RAM

BUG: 483948
FIXED-IN: 6.1